Made functionality for dayliread